src/test/ui/async-await/suggest-missing-await-closure.stderr
error[E0308]: mismatched types
  --> $DIR/suggest-missing-await-closure.rs:16:18
   |
LL | async fn make_u32() -> u32 {
   |                        --- the `Output` of this `async fn`'s found opaque type
...
LL |         take_u32(x)
   |                  ^ expected `u32`, found opaque type
   |
   = note:     expected type `u32`
           found opaque type `impl Future`
help: consider `await`ing on the `Future`
   |
LL |         take_u32(x.await)
   |                   ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
